route-table-associations.tf
resource "aws_route_table_association" "privroute" {
  subnet_id= aws_subnet.private.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "pubroute" {
  subnet_id = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
